objects/L2I_P_L_Event__e.object
<CustomObject>
    <fields>
        <fullName>Deal_Opportunity__c</fullName>
        <label>Deal Opportunity</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordID__c</fullName>
        <label>RecordID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>P_L_Event</label>
    <pluralLabel>P_L_Events</pluralLabel>
</CustomObject>